syntax = "proto3";

package steptracker;

service StepService {
  rpc UpdateSteps(UpdateStepsRequest) returns (UpdateStepsResponse);
  rpc GetRanking(GetRankingRequest) returns (GetRankingResponse);
}

message UpdateStepsRequest {
  string user_id = 1;
  int32 steps = 2;
}

message UpdateStepsResponse {
  bool success = 1;
}

message GetRankingRequest {
  string user_id = 1;
}

message GetRankingResponse {
  repeated RankingEntry rankings = 1;
}

message RankingEntry {
  string user_id = 1;
  int32 steps = 2;
}
